Fix bottom scrollbar width change hero image header dimension

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,18 +17,21 @@
 
   header {
     background-color: rgb(64, 154, 223);
-    height: 220px;
+    height: 22vw;
+    position: sticky;
+    top: 0;
+    z-index: 100;
   }
 
   .link-wrapper {
     background-color: #d9e9f0;
     width: 60vw;
     height: 60px;
-    margin-top: 90px;
+    margin-top: 1em;
     /* margin-left: 50px; */
     display: inline-block;
-    position: relative; 
-    left: 200px;
+    position: absolute; 
+    right: 2em;
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
     border-top-left-radius: 50px;
@@ -45,10 +48,10 @@
   }
 
   #site-logo img {
-    float: left;
+    /* float: left; */
     border-radius: 50%;
-    width: 15vw;
-    margin: 15px 40px;
+    width: 18vw;
+    margin: 1em;
     z-index: 10;
   }
 
@@ -73,7 +76,6 @@
 .interaction-box {
   height: 600px;
   width: 30%;
-  margin-left: 15px;
   position: absolute;
   background-color: #d9e9f0;
   z-index: 5;
@@ -84,13 +86,13 @@
 }
 
   #hero-image {
-    width: 75%;
+    width: 70%;
     height: 600px;
     background-image: url(../images/professional-golfer-bali.jpg);
     background-size: cover;
-    /* float: right; */
-    position: absolute;
-    left: 300px;
+    float: right;
+    position: relative;
+    right: 0;
   }
 
   .login-container {
@@ -98,9 +100,10 @@
     height: 150px;
     background-color: rgba(82, 78, 78, 0.5);
     border-radius: 8px;
-    position: relative;
-    top: 50px;
-    left: 400px;
+    position: absolute;
+    top: 2em;
+    right: 2em;
+    margin: 0;
   }
 
   #hero-login-forms {
@@ -123,16 +126,15 @@
     height: 70px;
     background-color: rgba(82, 78, 78, 0.5);
     border-radius: 8px;
-    position: relative;
-    top: 270px;
-    left: 425px;
+    position: absolute;
+    top: 25em;
+    right: 2em;
     padding: 15px;
     text-align: center;
   }
 
 #content-seperator {
   text-align: center;
-  height: 200px;
 }
 
 .golf-inspo {
@@ -151,9 +153,7 @@
 
 .local-courses-gallery {
   width: 100%;
-  height: 600px;
   text-align: center;
-  margin: 20px;
 }
 
 .golf-course-view {
@@ -179,7 +179,7 @@
   margin-top: 50px;
 }
 
-#live-info h1 {
+#live-info h2 {
   text-align: center;
   margin-top: 20px;
 }
